--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,9 @@ exclude = '''
 )
 '''
 
+[tool.coverage.report]
+show_missing = true
+
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
 load-plugins = [
@@ -111,10 +114,13 @@ no-docstring-rgx="^(_|test_|Meta$)"
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
 disable = """
     line-too-long,
+    broad-except,
     duplicate-code,
+    logging-fstring-interpolation,
     too-few-public-methods,
     too-many-lines,
     too-many-ancestors,
+    unused-argument,
     """
 
 [tool.pylint.miscellaneous]
