--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ ipython = "*"
 pylint = "*"
 pylint-django = "*"
 pylint-nautobot = "*"
+regex = "~2023.8.8"
 ruff = "*"
 yamllint = "*"
 toml = "*"
