--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,13 +50,13 @@ yamllint = "*"
 toml = "*"
 Markdown = "*"
 # Rendering docs to HTML
-mkdocs = "~1.6.0"
+mkdocs = "1.6.0"
 # Material for MkDocs theme
-mkdocs-material = "~9.1.15"
+mkdocs-material = "9.5.25"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "~0.24.1"
+mkdocstrings = "0.24.1"
 # Python-specific extension to mkdocstrings
-mkdocstrings-python = "~1.9.0"
+mkdocstrings-python = "1.9.0"
 # Render custom markdown for version added/changed/remove notes
 mkdocs-version-annotations = "1.0.0"
 sentry-sdk = "*"
