Allow metrics to be enabled selectively and disable all by default.

--- a/development/dev.env
+++ b/development/dev.env
@@ -50,3 +50,5 @@ POSTGRES_HOST=postgres
 MYSQL_DATABASE=nautobot
 MYSQL_USER=nautobot
 MYSQL_ROOT_HOST=%
+
+NAUTOBOT_DLM_ENABLED_METRICS = "nautobot_lcm_software_compliance_per_device_type,nautobot_lcm_software_compliance_per_inventory_item,nautobot_lcm_hw_end_of_support_per_part_number,nautobot_metrics_lcm_hw_end_of_support_site"
