--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "*"
+django-debug-toolbar = "<4.4"
 invoke = "*"
 ipython = "*"
 pylint = "*"
