--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ nautobot = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "*"
+django-debug-toolbar = "<4.4"
 invoke = "*"
 ipython = "*"
 pylint = "*"
@@ -50,10 +50,11 @@ markdown-version-annotations = "1.0.1"
 # Rendering docs to HTML
 mkdocs = "1.6.0"
 # Material for MkDocs theme
-mkdocs-material = "9.1.15"
+mkdocs-material = "9.5.25"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.22.0"
-mkdocstrings-python = "1.5.2"
+griffe = "1.0.0"
+mkdocstrings = "0.25.2"
+mkdocstrings-python = "1.10.8"
 sentry-sdk = "*"
 time-machine = "*"
 towncrier = "~23.6.0"
