--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ python = ">=3.8,<3.13"
 pycountry = "^22.3.5"
 matplotlib = "^3.3.4"
 nautobot = "^2.0.0"
+# Numpy is not a direct dependency, but we are assisting Poetry version resolution by providing constraints.
+numpy = [
+    {version = "^1.26", python = ">=3.9"},
+    {version = "<1.25", python = "==3.8"}
+]
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
