--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
-mkdocs==1.3.1
-mkdocs-material==8.3.0
-mkdocstrings==0.19
-mkdocstrings-python==0.7.1
-mkdocs-version-annotations==1.0.0
+mkdocs==1.5.3
+mkdocs-material==9.1.18
+markdown-version-annotations==1.0.1
+griffe==0.31.0
+mkdocstrings-python==1.2.0
+mkdocstrings==0.22.0
