--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,14 +41,15 @@ mysqlclient = "*"
 python-dotenv = "*"
 Markdown = "*"
 # Rendering docs to HTML
-mkdocs = "1.3.1"
+mkdocs = "1.5.3"
 # Material for MkDocs theme
-mkdocs-material = "8.3.0"
+mkdocs-material = "9.1.18"
 # Render custom markdown for version added/changed/remove notes
-mkdocs-version-annotations = "1.0.0"
+markdown-version-annotations = "1.0.1"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.19"
-mkdocstrings-python = "0.7.1"
+mkdocstrings = "0.22.0"
+mkdocstrings-python = "1.2.0"
+griffe = "0.31.0"
 
 [tool.black]
 line-length = 120
