--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,6 @@ docker-compose.override.yml
 override.env
 invoke.yml
 *.dccache
+
+# Static docs
+/nautobot_device_lifecycle_mgmt/static/nautobot_device_lifecycle_mgmt/docs/
