--- a/development/docker-compose.base.yml
+++ b/development/docker-compose.base.yml
@@ -1,60 +1,50 @@
 ---
-x-nautobot-build:
-  &nautobot-build
+x-nautobot-build: &nautobot-build
   build:
     args:
       NAUTOBOT_VER: "${NAUTOBOT_VER}"
       PYTHON_VER: "${PYTHON_VER}"
     context: "../"
     dockerfile: "development/Dockerfile"
-x-nautobot-base:
-  &nautobot-base
+x-nautobot-base: &nautobot-base
   image: "nautobot-device-lifecycle-mgmt/nautobot:${NAUTOBOT_VER}-py${PYTHON_VER}"
   env_file:
-    - "dev.env"
+    - "development.env"
     - "creds.env"
   tty: true
 
-version: "3.4"
 services:
   nautobot:
-    ports:
-      - "0.0.0.0:8080:8080"
     depends_on:
       redis:
         condition: "service_started"
       db:
         condition: "service_healthy"
-    <<: [ *nautobot-build, *nautobot-base ]
-  celery_worker:
+    <<:
+      - *nautobot-base
+      - *nautobot-build
+  worker:
     entrypoint:
       - "sh"
-      - "-c" # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
-      - "watchmedo auto-restart --directory './' --pattern '*.py' --recursive -- nautobot-server celery worker -l $$NAUTOBOT_LOG_LEVEL --events"
+      - "-c"  # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
+      - "nautobot-server celery worker -l $$NAUTOBOT_LOG_LEVEL --events"  ## $$ because of docker-compose
     depends_on:
-      - "nautobot"
-      - "redis"
+      nautobot:
+        condition: "service_healthy"
     healthcheck:
       interval: "30s"
       timeout: "10s"
       start_period: "30s"
       retries: 3
-      test:
-        [
-          "CMD",
-          "bash",
-          "-c",
-          "nautobot-server celery inspect ping --destination celery@$$HOSTNAME"
-        ]
+      test: ["CMD", "bash", "-c", "nautobot-server celery inspect ping --destination celery@$$HOSTNAME"]  ## $$ because of docker-compose
     <<: *nautobot-base
-  celery_beat:
+  beat:
     entrypoint:
       - "sh"
-      - "-c"
-      - "nautobot-server celery beat -l $$NAUTOBOT_LOG_LEVEL" # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
-    healthcheck:
-      disable: true
+      - "-c"  # this is to evaluate the $NAUTOBOT_LOG_LEVEL from the env
+      - "nautobot-server celery beat -l $$NAUTOBOT_LOG_LEVEL"  ## $$ because of docker-compose
     depends_on:
       - "nautobot"
-      - "redis"
+    healthcheck:
+      disable: true
     <<: *nautobot-base
