--- a/development/docker-compose.mysql.yml
+++ b/development/docker-compose.mysql.yml
@@ -1,21 +1,37 @@
 ---
-version: "3.4"
-
 services:
+  nautobot:
+    environment:
+      - "NAUTOBOT_DB_ENGINE=django.db.backends.mysql"
+    env_file:
+      - "development.env"
+      - "creds.env"
+      - "development_mysql.env"
+  worker:
+    environment:
+      - "NAUTOBOT_DB_ENGINE=django.db.backends.mysql"
+    env_file:
+      - "development.env"
+      - "creds.env"
+      - "development_mysql.env"
   db:
     image: "mysql:8"
     command:
-      - "--default-authentication-plugin=mysql_native_password"
+      - "--max_connections=1000"
     env_file:
-      - "dev.env"
+      - "development.env"
       - "creds.env"
+      - "development_mysql.env"
     volumes:
-      - "lcm_mysql_data:/var/lib/mysql"
-    ports:
-      - "3306:3306"
+      - "mysql_data:/var/lib/mysql"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test:
+        - "CMD"
+        - "mysqladmin"
+        - "ping"
+        - "-h"
+        - "localhost"
       timeout: "20s"
       retries: 10
 volumes:
-  lcm_mysql_data:  # yamllint disable-line rule:empty-values
+  mysql_data: {}
